common-resources/research-web/main-web/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: samplez
spec:
  gateways:
    - default/main-gateway
  hosts:
    - '*'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: research-web.main-web.svc.cluster.local
        port:
          number: 8080
